# virga_sniffer

./: .gitignore  .readthedocs.yaml  .zenodo.json  ChangeLog.md  README.md  README.txt  make_virga_mask.py  pyproject.toml  requirements.txt  setup.py
docs/: 01_introduction.md  02_setup.md  03_autodocs.rst  autodocs.rst  caveats.md  conf.py  config.md  datasets.md  flowchart.dot  index.rst  method.md  setup.md
docs/images/: example_detection.odg
example/: virga-sniffer_config_demo.ipynb  vs_interactive.py
example/test_data/: 2020-01-24_00_virga-sniffer_input.nc
legacy/: make_virga_mask.py
src/test/: test_cloud_base_height.py  test_layer_utils.py  test_virga_detection.py
src/virga_sniffer/: __init__.py  cloud_base_height.py  config_netcdf.json  config_vsdefault.json  layer_utils.py  nc-config.json  utils.py  virga_detection.py  vsplot.py
src/virga_sniffer/cmap/: holly.py  pride.py
